# nyu_diet_vision

./: .gitignore  README.md  __init__.py  config.py  diet_vision.py  main.py  pyproject.toml
app/: __init__.py  diet_vision.ipynb  diet_vision.py  main.py
apps/: NYU_DietVision_Segmentation.ipynb  app.css  app.html  app.js  diet_vision.py  food_classification.py  food_segmentation.py
docs/: diet_vision.md  hellophotogrammetry.md  week1.md  week10.md  week11.md  week2.md  week3.md  week4.md  week5.md  week6.md  week7.md  week8.md  week9.md
docs/hellophotogrammetry/: hellophotogrammetry.md
docs/report/: diet_vision.md  food_only_annotation.MD  week11.report.md  week4_report.md  week5_report.md  week6_report.md  week7_report.md  week8_report.md
docs/weekly_status/: week1.md
static/css/: main.css
static/js/: ontology.js  script.js  usdaFoods.js
templates/: index.html
volume_estimation/: HelloPhotogrammetry
